# manifesto

./: .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: 1-move-a-project.md  2-change-maintainer.md  3-meta.md  change_maintainer.md  meta.md  move_project.md
template-examples/: Makefile  Makefile.common  README.md
template-examples/aac-tactics/: .travis.yml  Makefile  meta.yml
template-examples/chapar/: .travis.yml  Makefile  coq-chapar-stores.opam  default.nix  meta.yml
template-examples/lemma-overloading/: .travis.yml  Makefile  coq-lemma-overloading.opam  meta.yml
templates/: .travis.yml.mustache  README.md  README.md.mustache  README.md.template  coq.opam.mustache  default.nix.mustache  extracted.opam.mustache  lemma-overloading.yml  opam.mustache  opam2.mustache
templates/examples/aac-tactics/: .travis.yml  README.md  coq-aac-tactics.opam  default.nix  meta.yml  opam  opam2
templates/examples/chapar/: .travis.yml  README.md  coq-chapar-stores.opam  coq-chapar.opam  meta.yml
templates/examples/lemma-overloading/: .travis.yml  README.md  coq-lemma-overloading.opam  meta.yml  opam  opam2
