opam-version: "2.0"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/coq-community/chapar"
dev-repo: "git+https://github.com/coq-community/chapar.git"
bug-reports: "https://github.com/coq-community/chapar/issues"
license: "MIT"

synopsis: "Three executable causally consistent distributed key-value stores"
description: """
Three key-value stores, verified to be causally consistent in
the Coq proof assistant and extracted to executable code.
"""

build: [make "-j%{jobs}%" "stores"]
depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {(>= "8.9" & < "8.11~") | (= "dev")}
  "ocamlbuild" {build}
  "batteries" {>= "2.8.0"}
]

authors: [
  "Mohsen Lesani"
  "Christian J. Bell"
  "Adam Chlipala"
]
